--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@aws-sdk/lib-storage": "^3.758.0",
     "@upstash/redis": "^1.34.7",
     "aws-sdk": "^2.1692.0",
-    "axios": "^1.6.8",
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "canvas": "^3.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
