--- a/app-version.json
+++ b/app-version.json
@@ -1,4 +1,4 @@
 {
-  "latestVersion": "1.0.37",
-  "apkUrl":"https://drive.google.com/file/d/10x8B5oTxJi9ckYjylrsqGGAOoKaM026G/view?usp=sharing"
+  "latestVersion": "1.0.38",
+  "apkUrl": "https://play.google.com/store/apps/details?id=com.jaintav"
 }
