--- a/app-version.json
+++ b/app-version.json
@@ -1,4 +1,4 @@
 {
-  "latestVersion": "1.0.41",
-  "apkUrl": "https://play.google.com/store/apps/details?id=com.jaintav"
+  "latestVersion": "1.0.43",
+  "apkUrl": "https://drive.google.com/file/d/1iRcb_nGHdrI6PsCKjWx0ZV5d1FeBtlwx/view?usp=sharing"
 }
