--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
     "fs": "^0.0.1-security",
+    "fuzzysort": "^3.1.0",
     "handlebars": "^4.7.8",
     "helmet": "^8.1.0",
     "ioredis": "^5.6.0",
