--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
+    "ffmpeg-static": "^5.3.0",
+    "fluent-ffmpeg": "^2.1.3",
     "form-data": "^4.0.5",
     "fs": "^0.0.1-security",
     "fuzzysort": "^3.1.0",
@@ -40,6 +42,7 @@
     "nodemailer": "^6.10.0",
     "password-validator": "^5.3.0",
     "path": "^0.12.7",
+    "pdf-lib": "^1.17.1",
     "qrcode": "^1.5.4",
     "razorpay": "^2.9.6",
     "sharp": "^0.33.5",
