--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mongoose": "^8.3.3",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
+    "newrelic": "^13.12.0",
     "node-cron": "^4.2.1",
     "nodemailer": "^6.10.0",
     "password-validator": "^5.3.0",
