--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@aws-sdk/client-s3": "^3.758.0",
     "@aws-sdk/lib-storage": "^3.758.0",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@newrelic/winston-enricher": "^4.0.1",
     "@upstash/redis": "^1.34.7",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.9.0",
